--- a/index.html
+++ b/index.html
@@ -159,29 +159,29 @@
                     <video class="video2" src="./photo/video2.mp4" autoplay controls loop muted></video>
                 </div>
                 
-                <img src="./photo/framee.png">
+                <img class="film" src="./photo/framee.png">
 
-                <div >
+                <div class="self">
                     <div class="about">
                         <h2>About me</h2>
-                        <a>이름: 최주은</a><br>
-                        <a>생년월일: 1997.08.22</a><br>
-                        <a>e-mail: junetldms@naver.com</a><br>
-                        <a>~2016: 현대고등학교 졸업</a><br>
-                        <a>~2021: 상명대학교 가족복지학과 졸업</a><br>
-                        <a>~현재: UI/UX 디자인 엡퍼블리셔&프론트엔드 개발자 양성과정 7G 이수 </a>
+                        <a><img class="icon" src="./photo/icon1.png">최주은</a><br>
+                        <a><img class="icon" src="./photo/icon2.png"> 1997.08.22</a><br>
+                        <a><img class="icon" src="./photo/icon3.png">  junetldms@naver.com</a><br>
+                        <a><img class="icon" src="./photo/icon4.png">~2016: 현대고등학교 졸업</a><br>
+                        <a><img class="icon" src="./photo/icon4.png">~2021: 상명대학교 가족복지학과 졸업</a><br>
+                        <a><img class="icon" src="./photo/icon5.png">NOW: UI/UX 디자인 엡퍼블리셔&프론트엔드 개발자 양성과정 7G 이수 </a>
                         <a></a>
                     </div>
                     
                     <div class="skill">
                         <h2>Skill</h2>
-                        <a>- PHOTOSHOP</a><br>
-                        <a>- ILLUSTRATOR</a><br>
-                        <a>- HTML</a><br>
-                        <a>- CSS</a><br>
-                        <a>- JAVASCRIPT</a><br>
-                        <a>- JQUERY</a><br>
-                        <a>- FINALCUT</a>
+                        <a><img class="icon" src="./photo/icon6.png"> PHOTOSHOP</a><br>
+                        <a><img class="icon" src="./photo/icon7.png"> ILLUSTRATOR</a><br>
+                        <a><img class="icon" src="./photo/icon8.png"> HTML</a><br>
+                        <a><img class="icon" src="./photo/icon9.png"> CSS</a><br>
+                        <a><img class="icon" src="./photo/icon10.png"> JAVASCRIPT</a><br>
+                        <a><img class="icon" src="./photo/icon10.png"> JQUERY</a><br>
+                        <a><img class="icon" src="./photo/icon11.png"> FINALCUT</a>
                     </div>
                 </div>
             </section>
