--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     <div class="fp">
                         <a class="blank"  href="https://zoochu.github.io/react-03/" target="blank">
                             <p class="up">해당 페이지로 이동하기</p>
-                        <img src="./photo/react3.JPG" href="https://zoochu.github.io/renewalsite/renewal_1.html" target="blank">
+                        <img src="./photo/aesop.png" href="https://zoochu.github.io/renewalsite/renewal_1.html" target="blank">
                         </a>
                         <a>
                             03 Aesop 
@@ -277,7 +277,7 @@
                                 Html5, Css3, Javascript
                             </p>
                             <p> 
-                                Aesop 홈페이지를 클론 사이트로 선정하여 하나부터 열까지 스스로 제작해보았다.
+                                Aesop 홈페이지를 클론 사이트로 선정하여 하나부터 열까지 스스로 제작하는중
                             </p>
                             
                         </a>
@@ -285,7 +285,7 @@
                     <div class="fp">
                         <a class="blank"  href="https://zoochu.github.io/react-03/" target="blank">
                             <p class="up">해당 페이지로 이동하기</p>
-                        <img src="./photo/aesop.JPG" href="https://zoochu.github.io/renewalsite/renewal_1.html" target="blank">
+                        <img src="./photo/insta.png" href="https://zoochu.github.io/renewalsite/renewal_1.html" target="blank">
                         </a>
                         <a>
                             04 인스타그램
@@ -293,7 +293,7 @@
                                 Html5, Css3, Javascript
                             </p>
                             <p> 
-                                react를 사용하여 SNS인 인스타그램 페이지를 제작해보았다.
+                                react를 사용하여 SNS인 인스타그램을 스터디 조원들과 함께 협업 프로젝트를 진행했다.
                             </p>
                             
                         </a>
