--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
             <img class="js1" src="./photo/icon10.png"> 
 
         </div>
+        <div class="next">
+            <!-- <a><img src="photo/scroll.png"></a> -->
+        </div>
             <script>
                 document.addEventListener('DOMContentLoaded',function(event){
   // array with texts to type in typewriter
