--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         </a>
                     </div>
                     <div class="fp">
-                        <a class="blank"  href="https://zoochu.github.io/react-03/" target="blank">
+                        <a class="blank"  href="https://zoochu.github.io/Aesop/" target="blank">
                             <p class="up">해당 페이지로 이동하기</p>
                         <img src="./photo/aesop.png" href="https://zoochu.github.io/renewalsite/renewal_1.html" target="blank">
                         </a>
@@ -280,13 +280,13 @@
                                 Html5, Css3, Javascript
                             </p>
                             <p> 
-                                Aesop 홈페이지를 클론 사이트로 선정하여 하나부터 열까지 스스로 제작하는중
+                                Aesop 홈페이지를 클론 사이트로 선정하여 하나부터 열까지 스스로 제작하는 중이다.
                             </p>
                             
                         </a>
                     </div>
                     <div class="fp">
-                        <a class="blank"  href="https://zoochu.github.io/react-03/" target="blank">
+                        <a class="blank"  href="https://github.com/green-insta-project/snsclone.git" target="blank">
                             <p class="up">해당 페이지로 이동하기</p>
                         <img src="./photo/insta.png" href="https://zoochu.github.io/renewalsite/renewal_1.html" target="blank">
                         </a>
