--- a/index.html
+++ b/index.html
@@ -272,15 +272,18 @@
                     <div class="fp">
                         <a class="blank"  href="https://zoochu.github.io/Aesop/" target="blank">
                             <p class="up">해당 페이지로 이동하기</p>
-                        <img src="./photo/aesop.png" href="https://zoochu.github.io/renewalsite/renewal_1.html" target="blank">
+                        <img src="./photo/instagramm.JPG" href="https://zoochu.github.io/renewalsite/renewal_1.html" target="blank">
                         </a>
                         <a>
-                            03 Aesop 
+                            03 Instagram (GroupProject) 
                             <p>
                                 Html5, Css3, Javascript
                             </p>
                             <p> 
-                                Aesop 홈페이지를 클론 사이트로 선정하여 하나부터 열까지 스스로 제작하는 중이다.
+                                자바스크립트 라이브러리의 일종인 React를 사용하여 스터디 조원들과 함께 
+                                협업하여 인스타그램 클론 사이트를 제작해보았다.
+                                제작하면서  
+                                
                             </p>
                             
                         </a>
