--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     <div class="fp">
                         <a class="blank"  href="https://github.com/green-insta-project/snsclone" target="blank">
                             <p class="up">해당 페이지로 이동하기</p>
-                        <img src="./photo/instagramm.JPG">
+                        <img src="./photo/instagramm.jpg">
                         </a>
                         <a>
                             03 Instagram (GroupProject) 
@@ -301,7 +301,7 @@
                     <div class="fp">
                         <a class="blank"  href="http://127.0.0.1:5500/src/index.html" target="blank">
                             <p class="up">해당 페이지로 이동하기</p>
-                        <img src="./photo/portfolioo.JPG">
+                        <img src="./photo/portfolioo.jpg">
                         </a>
                         <a>
                             04 Jooeun's Portfolio
