--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="./slick-default/slick.min.js"></script>
-    <script src="./js/slick.min.js"></script>
+    <!-- <script src="./js/slick.min.js"></script> -->
     <script src="./js/index.js" ></script>
     <script src="./fullPage.js/fullpage.min.js"></script>
 </head>
@@ -271,6 +271,10 @@
                                 남녀노소 사용하기 쉽게 웹페이지가 제작되었으며, 마루사이트 느낌과 같은 사이트를 제작해보고자
                                 클론코딩사이트로 선택하여 제작해보았다.
                             </p>
+                            <!-- <p>
+                                <a><img class="color" src="photo/marublue.png"></a>
+                                    
+                            </p> -->
                         </a>
                     </div>
                     <div class="fp">
