--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                         <img src="./photo/renewal1.JPG">
                         </a>
                         <a>
-                           01 리뉴얼사이트
+                           01 Renewal Site
                            <p><b>사용한 언어</b></p>
                             <p>
                                 &nbsp;&nbsp; Html5, Css3, Javascript
@@ -260,7 +260,7 @@
                         <img src="./photo/maru.JPG">
                         </a>
                         <a>
-                            02 마루사이트
+                            02 Maroo Site
                             <p><b>사용한 언어</b></p>
                                 <p>
                                     &nbsp;&nbsp; Html5, SCSS, Javascript
@@ -319,6 +319,26 @@
                                 포트폴리오 속에서 녹이고 싶어 ‘진중함’이라는 주제로 제작해보았다.
                                 '진중함'을 표현하기 위해 디자인 색깔을 블랙과 화이트로 선택하였고, 글씨체는 NOTO Sans로 작업했다.
                                 해당 포트폴리오 페이지에선 신입 웹퍼블리셔 최주은에 대한 간략한 소개와 지금까지 제작했던 리뉴얼 사이트, 클론 코딩 등의 작업물을 볼 수 있다.
+                            </p>
+                            
+                        </a>
+                    </div>
+                    <div class="fp">
+                        <a class="blank"  href="https://zoochu.github.io/resposiveweb/" target="blank">
+                            <p class="up">해당 페이지로 이동하기</p>
+                        <img class="phone" src="./photo/phone.png" style="width: 390px; left: 1000px;">
+                        </a>
+                        <a>
+                            05 Responsive Web
+                            <p><b>사용한 언어</b></p>
+                                <p>
+                                    &nbsp;&nbsp; Html5, Css3
+                                </p>
+                            <p><b>프로젝트 설명</b></p>
+                            <p> 
+                                &nbsp;&nbsp; <b>@media</b>를 사용하여 간단하게 반응형 웹 페이지를 제작해보았습니다. 
+                                현재는 빈 페이지이나, <br>
+                                한페이지씩 차근차근 채워나갈 예정입니다.
                             </p>
                             
                         </a>
