--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                     <div class="fp">
                         <a class="blank"  href="https://zoochu.github.io/resposiveweb/" target="blank">
                             <p class="up">해당 페이지로 이동하기</p>
-                        <img class="phone" src="./photo/phone.png" style="width: 390px; left: 1000px;">
+                        <img src="./photo/phone1.png" >
                         </a>
                         <a>
                             05 Responsive Web
